# discourse-k8s-operator

./: .charmignore  .dockerignore  .flake8  .gitignore  .gitmodules  .jujuignore  .licenserc.yaml  .lycheeignore  .trivyignore  .vale.ini  .woke.yaml  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  COPYRIGHT  LICENSE  Makefile  Makefile.docs  README.md  SKILL.md  actions.yaml  artifacts.yaml  charmcraft.yaml  concierge.yaml  config.yaml  discourse.Dockerfile  generate-src-docs.sh  index.html  juju-crashdump-ce4bbcc0-2f6c-41f9-bc5a-4fc5e35ff3b9.tar.xz  localstack-installation.sh  lychee.toml  metadata.yaml  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  rockcraft.yaml  rtd-setup.py  rtd-setup.sh  s3-installation.sh  (+5 more)
.github/: .jira_sync_config.yaml  pull_request_template.md
.github/agents/: my-agent.md
.github/load_tests/: main.js
.github/workflows/: docs.yaml  docs_rtd.yaml  integration_test.yaml  integration_test_with_secrets.yaml  issues.yaml  promote_charm.yaml  publish_charm.yaml  test.yaml  test_and_publish_charm.yaml
1518/: index.html
1518/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1518/export/: influxDbData.txt  prometheusData.txt
1518/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json
1518/widgets/: duration.json  executors.json  retry-trend.json  severity.json  summary.json
1520/: index.html
1520/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1520/export/: influxDbData.txt  prometheusData.txt
1520/history/: categories-trend.json  history.json
1520/widgets/: duration-trend.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  summary.json
1521/: index.html
1521/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1521/export/: influxDbData.txt  prometheusData.txt
1521/history/: categories-trend.json  history-trend.json
1521/widgets/: duration-trend.json  duration.json  executors.json  retry-trend.json  severity.json  summary.json
1522/: index.html
1522/export/: influxDbData.txt
1522/history/: history-trend.json
1522/widgets/: categories-trend.json  duration-trend.json  executors.json  retry-trend.json
1523/: index.html
1523/export/: influxDbData.txt
1523/history/: categories-trend.json  history-trend.json  history.json
1523/widgets/: duration-trend.json  executors.json  retry-trend.json
1524/: index.html
1524/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1524/export/: influxDbData.txt  prometheusData.txt
1524/history/: categories-trend.json  duration-trend.json  history.json
1524/widgets/: executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  summary.json
1525/: index.html
1525/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1525/export/: influxDbData.txt  prometheusData.txt
1525/history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
1525/widgets/: categories-trend.json  executors.json  severity.json  status-chart.json  summary.json
1526/: index.html
1526/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1526/export/: influxDbData.txt  prometheusData.txt
1526/history/: duration-trend.json  history.json  retry-trend.json
1526/widgets/: categories-trend.json  duration.json  executors.json  history-trend.json  severity.json  summary.json
1527/: index.html
1527/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1527/export/: influxDbData.txt  prometheusData.txt
1527/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json
1527/widgets/: duration.json  executors.json  retry-trend.json  severity.json  summary.json
1528/: index.html
1528/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1528/export/: influxDbData.txt  prometheusData.txt
1528/history/: duration-trend.json  history.json  retry-trend.json
1528/widgets/: categories-trend.json  duration.json  executors.json  history-trend.json  summary.json  (+1 more)
1529/: index.html
1530/: index.html
1531/: index.html
1532/: index.html
1533/: index.html
1534/: index.html
1535/: index.html
1536/: index.html
1537/: index.html
1538/: index.html
1539/: index.html
1540/: index.html
1541/: index.html
1542/: index.html
1543/: index.html
1544/: index.html
1545/: index.html
1546/: index.html
1547/: index.html
1548/: index.html
1549/: index.html
1550/: index.html
1551/: index.html
1552/: index.html
1553/: index.html
1554/: index.html
1555/: index.html
1556/: index.html
1557/: index.html
1558/: index.html
1559/: index.html
1560/: index.html
1564/: index.html
1571/: index.html
1573/: index.html
1583/: index.html
1609/: index.html
1616/: index.html
1624/: index.html
1663/: index.html
1665/: index.html
1669/: index.html
1679/: index.html
1701/: index.html
1722/: index.html
1735/: index.html
1750/: index.html
1762/: index.html
1786/: index.html
1798/: index.html
1809/: index.html
1860/: index.html
1901/: index.html
1905/: index.html
1915/: index.html
1919/: index.html
1921/: index.html
1923/: index.html
1976/: index.html
discourse_rock/: rockcraft.yaml
docs/: .custom_wordlist.txt  changelog.md  conf.py  index.md  requirements.txt  tutorial.md
image/: Dockerfile
lib/: oci_image.py  ops  resource-oci-image
make/: charm.mk  common.mk  docs.mk  help.mk  juju.mk  rock.mk  tox.mk
src/: charm.py  constants.py  database.py  database_client.py  discourse.py  oauth.py  oauth_observer.py
src-docs/: charm.py.md  database.py.md
terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
testing_database/: creating-the-testing-database.md  testing_database.sql
tests/: conftest.py
(+2361 files in other folders)
