# Copyright 2024 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.bandit]
exclude_dirs = ["/venv/"]
[tool.bandit.assert_used]
skips = ["*tests/*.py"]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true


[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py38"]

[tool.isort]
line_length = 99
profile = "black"

# Linting tools configuration
[tool.flake8]
max-line-length = 99
max-doc-length = 99
max-complexity = 10
exclude = [".git", "__pycache__", ".tox", "build", "dist", "*.egg_info", "venv"]
select = ["E", "W", "F", "C", "N", "R", "D", "H"]
# Ignore W503, E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["W503", "E501", "D107"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = ["tests/*:D100,D101,D102,D103,D104"]
docstring-convention = "google"
# Check for properly formatted copyright header in each file
copyright-check = "True"
copyright-author = "Canonical Ltd."
copyright-regexp = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
check_untyped_defs = true

[tool.pylint.SIMILARITIES]
min-similarity-lines=10

[tool.poetry]
# Charm is not packed as a standard Python package; this information is not used
name = "charm"
version = "0.0.0"
description = ""
authors = ["IS DevOps <https://launchpad.net/~canonical-is-devops>"]

[tool.poetry.dependencies]
python = "^3.10"
ops = "^2.13.0"
pydantic = "^2.7.1"

[tool.poetry.group.charm-libs.dependencies]
ops = "*"
pydantic = "*"

[tool.poetry.group.fmt]
optional = true

[tool.poetry.group.fmt.dependencies]
black = "^24.2.0"
isort = "^5.13.2"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
beautifulsoup4 = "^4.12.3"
black = "^24.2.0"
boto3 = "^1.34.99"
codespell = "^2.2.6"
cosl = "^0.0.11"
flake8 = "^7.0.0"
flake8-builtins = "^2.2.0"
flake8-copyright = "^0.2.4"
flake8-docstrings = ">=1.6.0"
flake8-docstrings-complete = ">=1.0.3"
flake8-test-docs = ">=1.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pep8-naming = "^0.13.3"
pydocstyle = ">=2.10"
pylint = "^3.0.3"
pyproject-flake8 = "^7.0.0"
pytest = "^8.0.1"
pytest-operator = "^0.32.0"
python-magic = "^0.4.27"
types-pyyaml = "^6.0.12.12"
types-requests = "^2.31.0.20240218"

[tool.poetry.group.src-docs]
optional = true

[tool.poetry.group.src-docs.dependencies]
lazydocs = "^0.4.8"

[tool.poetry.group.unit]
optional = true

[tool.poetry.group.unit.dependencies]
coverage = {extras = ["toml"], version = "^7.4.2"}
pytest = "^8.0.1"

[tool.poetry.group.coverage-report]
optional = true

[tool.poetry.group.coverage-report.dependencies]
coverage = {extras = ["toml"], version = "^7.4.2"}
pytest = "^8.0.1"

[tool.poetry.group.static]
optional = true

[tool.poetry.group.static.dependencies]
bandit = {extras = ["toml"], version = "^1.7.7"}

[tool.poetry.group.integration]
optional = true

[tool.poetry.group.integration.dependencies]
beautifulsoup4 = "^4.12.3"
boto3 = "^1.34.99"
cosl = "^0.0.11"
juju = ">=3.0"
protobuf = "^3.20.3"
psycopg2-binary = "^2.9.9"
pytest = "^8.0.1"
pytest-operator = "^0.32.0"
saml-test-idp = { git = "https://github.com/canonical/saml-test-idp.git", branch = "main" }
